--- a/mvc/view/style.css
+++ b/mvc/view/style.css
@@ -9,6 +9,8 @@
     --primary-dark: white;
     --secondary-dark: black;
 
+    --sepia: #c5af89; 
+
 
 
     /* spacing */
@@ -45,8 +47,7 @@ h1 {
 
 aside {
     width: 15vw;
-    border-right: 1px dashed var(--primary-light);
-    overflow-y: scroll;
+   overflow-y: scroll;
     padding: var(--space-1);
 }
 
@@ -94,10 +95,11 @@ nav {
 } */
 
 
-
+.series_season, .episodes {
+    margin-bottom: calc(var(--space-1) / 2);
+}
 .series_season {
     padding: calc(var(--space-1) / 2) 0;
-    margin-bottom: calc(var(--space-1) / 2);
     position: relative;
     border: 1px dashed var(--primary-light);
     text-transform: uppercase;
@@ -133,7 +135,7 @@ nav {
     content: "\f111";
     font-weight: 900;
     font-family: 'Font Awesome\ 5 Free';
-    padding: 0 5px;
+    padding: 0 10px 0 10px;
 
 }
 
@@ -174,6 +176,7 @@ nav {
 
 [data-collapsed="yes"]::after {
     content: "-";
+    color: var(--secondary-light)!important;
 }
 
 [data-collapsed="yes"]::after,
@@ -198,21 +201,39 @@ nav {
     font-size: var(--space-2);
 }
 
+/* ====================================================== */
+/* ---------------------  Scrollbar  -------------------- */
+/* ====================================================== */
 
-/* Track */
-::-webkit-scrollbar-track {
-    background-color: red;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background-color: purple;
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: var(--primary-light); 
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--sepia);
+    border:2px dashed var(--primary-light);
+    border-radius: 5px;
+    max-height: 6px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background-color: green;
+    border:2px dashed var(--primary-light);
+    background: var(--secondary-light);
+  }
+
+  ::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+    display: none;
 }
-
-
-/* background: #c5af89; */
+::-webkit-scrollbar-corner {
+    background-color: transparent;
+}
