--- a/mvc/view/style.css
+++ b/mvc/view/style.css
@@ -301,6 +301,7 @@ nav {
 
 .timebtn {
     width: 50px;
+    -moz-width: fit-content;
     min-width: fit-content;
     height: 50px;
     background-color: black;
@@ -323,7 +324,8 @@ nav {
     border: 1px solid black;
     border-left: none;
 
-    width: 50px;
+    width: fit-content;
+    -moz-width: fit-content;
     min-width: fit-content;
     height: 50px;
     display: flex;
@@ -352,6 +354,7 @@ nav {
 
 .timeclock {
     width: 50px;
+    -moz-width: fit-content;
     min-width: fit-content;
     height: 50px;
     background-color: white;
@@ -400,6 +403,7 @@ nav {
     margin-top: var(--space-1);
     border: 1px dashed black;
     width: 100px !important;
+    -moz-max-width: fit-content;
     max-width: fit-content;
     display: inline-block;
     text-align: center;
@@ -463,14 +467,18 @@ nav {
     color:black;
 }
 
-.note-item{
+.note{
     white-space: pre-wrap;
     padding: calc(var(--space-1) / 2);
     margin-bottom: calc(var(--space-1) / 2);
     border: 1px dashed black;
     text-transform: uppercase;
     font-size: 100%;
+}
+
+.note-item{
     position: relative;
+
 }
 
 .note-item:hover{
@@ -478,7 +486,7 @@ nav {
     color: white;
 }
 
-.note-item::before{
+.note::before{
     content: "\f111";
     font-family: 'Font Awesome\ 5 Free';
     font-size:50%;
@@ -487,21 +495,27 @@ nav {
     color: var(--sepia);
 }
 
-.note-item:hover:before,.note-item:active:before {
-    color:white;
-}
+/* .note-item:hover:before,.note-item:active:before {
+    color:var(--sepia);
+    background-color: white;
+} */
 
 .del{
     position: absolute;
     background-color: var(--sepia);
-    border-radius: 10px;
-    right:-10;
+    border-radius: 30px;
+    padding: 1px;
+    color: black;
 }
 
 .del {
+    right:-10;
     top:-10;  
 }
-
+.del:hover{
+    color:var(--sepia);
+    background-color: black;
+}
 
 /* ========================================================================== */
 
@@ -517,7 +531,6 @@ nav {
 
 .main-title {
     font-size: var(--space-2);
-    margin-bottom: var(--space-4);
 }
 
 .sepia {
@@ -567,3 +580,7 @@ nav {
 .cursor-pointer:hover{
     cursor: pointer;
 }
+#video{
+    margin: var(--space-4) auto;
+}
+    
