--- a/mvc/view/style.css
+++ b/mvc/view/style.css
@@ -1,6 +1,7 @@
 :root {
 
     --sepia: #c5af89;
+    /* --sepia: #b28f69; */
 
     /* spacing */
     --space-1: 1.5rem;
@@ -65,10 +66,10 @@ aside {
     background-color: white;
 }
 
-textarea{
+input[type="text"]{
     font-family: var(--oswald);
     font-size:14px;
-    width: 100%;
+    width: auto;
     resize: vertical;
 }
 
@@ -83,6 +84,7 @@ main {
     background: white;
     position: fixed;
     height: 100vh;
+    max-height: 100%;
 }
 
 main {
@@ -401,6 +403,18 @@ nav {
     justify-content: center;
 
 }
+.speedbtn-accent{
+    background-color: black;
+    color: var(--sepia);
+    font-family: var(--oswald);
+    font-size: var(--space-2);
+    margin-top: var(--space-1);
+    height: 50px;
+    width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .speed {
     color: black !important;
@@ -428,6 +442,14 @@ nav {
     cursor: pointer;
 }
 
+
+.speedbtn-accent:hover,
+.speedbtn-accent:active,
+.speedbtn-accent:focus{
+    background-color: var(--sepia);
+    color: black;
+    cursor: pointer;
+}
 /* ========================================================================== */
 
 
@@ -435,10 +457,11 @@ nav {
 /* Notes stuff ============================================================== */
 #insert_note{
     border:1px dashed black;
-    min-height:100px;
+    min-height:50px;
     padding:5px 10px; 
     position: relative;
     z-index:1;
+    width: 100%;
 }
 #notes_container:before{
     content: "";
@@ -534,10 +557,14 @@ nav {
     text-transform: uppercase;
 }
 
-.main-title {
+.main-title, .course_name {
     font-size: var(--space-2);
 }
-
+.course_name{
+    line-height: normal;
+    text-transform: uppercase;
+    font-weight: 900;
+}
 .sepia {
     color: var(--sepia);
 }
@@ -586,7 +613,7 @@ nav {
     cursor: pointer;
 }
 #video{
-    margin: var(--space-4) auto;
+    margin: var(--space-1) auto;
 }
     
 
